# minimal-of-start

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CopyCommands.cmake  OpenFOAM.cmake  macros.cmake
